change dummy data

--- a/ancient.html
+++ b/ancient.html
@@ -18,47 +18,47 @@
     </div>
     <div id="main">
         <div class="grid">
-            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Ken Myers" pStyle="Swag"
+            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
                 pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
                 <img src="paintings/Ancient/Ambum_Stone.png">
             </div>
-            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Ken Myers" pStyle="Swag"
+            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
                 pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
                 <img src="paintings/Ancient/Anthropomorphic_Stele.png">
             </div>
-            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Ken Myers" pStyle="Swag"
+            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
                 pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
                 <img src="paintings/Ancient/Apollo_11_Stones.png">
             </div>
-            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Ken Myers" pStyle="Swag"
+            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
                 pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
                 <img src="paintings/Ancient/Bushel_with_Ibex_Motifs.png">
             </div>
-            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Ken Myers" pStyle="Swag"
+            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
                 pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
                 <img src="paintings/Ancient/Camelid_Sacrum_in_the_shape_of_a_canine.png">
             </div>
-            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Ken Myers" pStyle="Swag"
+            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
                 pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
                 <img src="paintings/Ancient/Great_Hall_of_the_Bulls.png">
             </div>
-            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Ken Myers" pStyle="Swag"
+            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
                 pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
                 <img src="paintings/Ancient/Jade_Cong.png">
             </div>
-            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Ken Myers" pStyle="Swag"
+            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
                 pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
                 <img src="paintings/Ancient/Running_Horned_Woman.png">
             </div>
-            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Ken Myers" pStyle="Swag"
+            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
                 pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
                 <img src="paintings/Ancient/Stonehenge.png">
             </div>
-            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Ken Myers" pStyle="Swag"
+            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
                 pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
                 <img src="paintings/Ancient/Terra_cotta_fragment.png">
             </div>
-            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Ken Myers" pStyle="Swag"
+            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
                 pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
                 <img src="paintings/Ancient/Tlatilco_female_figurine.png">
             </div>
