--- a/medieval.html
+++ b/medieval.html
@@ -17,22 +17,22 @@
     </div>
         <div id = "main">
             <div class="grid">
-            <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Ken Myers" pStyle = "Swag" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Test Artist" pStyle = "test style" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
                 <img src = "paintings/Medieval/Untitled_Artwork 1.png">
             </div>
-            <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Ken Myers" pStyle = "Swag" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Test Artist" pStyle = "test style" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
                 <img src = "paintings/Medieval/Untitled_Artwork 2.png">
             </div>
-            <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Ken Myers" pStyle = "Swag" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Test Artist" pStyle = "test style" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
                 <img src = "paintings/Medieval/Untitled_Artwork 3.png">
             </div>
-            <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Ken Myers" pStyle = "Swag" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Test Artist" pStyle = "test style" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
                 <img src = "paintings/Medieval/Untitled_Artwork 4.png">
             </div>
-            <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Ken Myers" pStyle = "Swag" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Test Artist" pStyle = "test style" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
                 <img src = "paintings/Medieval/Untitled_Artwork 5.png">
             </div>
-            <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Ken Myers" pStyle = "Swag" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Test Artist" pStyle = "test style" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
                 <img src = "paintings/Medieval/Untitled_Artwork.png">
             </div>
             
