--- a/modern.html
+++ b/modern.html
@@ -18,43 +18,43 @@
     </div>
     <div id="main">
         <div class="grid">
-            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Ken Myers" pStyle="Swag"
+            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
                 pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
                 <img src="paintings/Modern/Earths_Creation.png">
             </div>
-            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Ken Myers" pStyle="Swag"
+            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
                 pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
                 <img src="paintings/Modern/Electronic_Superhighway.png">
             </div>
-            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Ken Myers" pStyle="Swag"
+            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
                 pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
                 <img src="paintings/Modern/I_Still_Face_You.png">
             </div>
-            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Ken Myers" pStyle="Swag"
+            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
                 pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
                 <img src="paintings/Modern/Olive_Oil.png">
             </div>
-            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Ken Myers" pStyle="Swag"
+            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
                 pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
                 <img src="paintings/Modern/Preying_Mantra.png">
             </div>
-            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Ken Myers" pStyle="Swag"
+            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
                 pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
                 <img src="paintings/Modern/Pure_Land.png">
             </div>
-            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Ken Myers" pStyle="Swag"
+            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
                 pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
                 <img src="paintings/Modern/Rebellious_Silence.png">
             </div>
-            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Ken Myers" pStyle="Swag"
+            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
                 pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
                 <img src="paintings/Modern/Stadia_II.png">
             </div>
-            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Ken Myers" pStyle="Swag"
+            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
                 pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
                 <img src="paintings/Modern/The_Red_Dune.png">
             </div>
-            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Ken Myers" pStyle="Swag"
+            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
                 pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
                 <img src="paintings/Modern/Trade.png">
             </div>
