--- a/renaissance.html
+++ b/renaissance.html
@@ -18,43 +18,43 @@
     </div>
     <div id="main">
         <div class="grid">
-            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Ken Myers" pStyle="Swag"
+            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
                 pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
                 <img src="paintings/Renaissance/Calling_of_Saint_Matthew.png">
             </div>
-            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Ken Myers" pStyle="Swag"
+            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
                 pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
                 <img src="paintings/Renaissance/Entombment_of_Christ.png">
             </div>
-            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Ken Myers" pStyle="Swag"
+            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
                 pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
                 <img src="paintings/Renaissance/Frontispiece_of_the_Codex_Mendoza.png">
             </div>
-            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Ken Myers" pStyle="Swag"
+            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
                 pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
                 <img src="paintings/Renaissance/Hunters_in_the_Snow.png">
             </div>
-            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Ken Myers" pStyle="Swag"
+            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
                 pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
                 <img src="paintings/Renaissance/Madonna_and_Child_with_Two_Angels.png">
             </div>
-            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Ken Myers" pStyle="Swag"
+            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
                 pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
                 <img src="paintings/Renaissance/School_of_Athens.png">
             </div>
-            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Ken Myers" pStyle="Swag"
+            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
                 pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
                 <img src="paintings/Renaissance/The_Arnolfini_Portrait.png">
             </div>
-            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Ken Myers" pStyle="Swag"
+            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
                 pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
                 <img src="paintings/Renaissance/The_Birth_of_Venus.png">
             </div>
-            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Ken Myers" pStyle="Swag"
+            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
                 pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
                 <img src="paintings/Renaissance/The_Last_Supper.png">
             </div>
-            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Ken Myers" pStyle="Swag"
+            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
                 pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
                 <img src="paintings/Renaissance/The_Venus_of_Urbino.png">
             </div>
