--- a/romance.html
+++ b/romance.html
@@ -17,37 +17,37 @@
     </div>
         <div id = "main">
             <div class="grid">
-            <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Ken Myers" pStyle = "Swag" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Test Artist" pStyle = "test style" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
                 <img src = "paintings/romance/Liberty_Leading_the_People.png">
             </div>
-            <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Ken Myers" pStyle = "Swag" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Test Artist" pStyle = "test style" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
                 <img src = "paintings/romance/Newton.png">
             </div>
-            <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Ken Myers" pStyle = "Swag" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Test Artist" pStyle = "test style" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
                 <img src = "paintings/romance/Saturn_Devouring_his_Son.png">
             </div>
-            <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Ken Myers" pStyle = "Swag" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Test Artist" pStyle = "test style" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
                 <img src = "paintings/romance/The_Fighting_Temeraire.png">
             </div>
-            <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Ken Myers" pStyle = "Swag" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Test Artist" pStyle = "test style" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
                 <img src = "paintings/romance/The_Hay_Wain.png">
             </div>
-            <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Ken Myers" pStyle = "Swag" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Test Artist" pStyle = "test style" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
                 <img src = "paintings/romance/The_Kiss.png">
             </div>
-            <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Ken Myers" pStyle = "Swag" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Test Artist" pStyle = "test style" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
                 <img src = "paintings/romance/The_Ninth_Wave.png">
             </div>
-            <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Ken Myers" pStyle = "Swag" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Test Artist" pStyle = "test style" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
                 <img src = "paintings/romance/The_Oxbow.png">
             </div>
-            <!-- <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Ken Myers" pStyle = "Swag" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <!-- <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Test Artist" pStyle = "test style" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
                 <img src = "paintings/romance/The_Raft_of_Medusa.png">
             </div>
-            <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Ken Myers" pStyle = "Swag" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Test Artist" pStyle = "test style" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
                 <img src = "paintings/romance/The_Third_of_May_1808.png">
             </div>
-            <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Ken Myers" pStyle = "Swag" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
+            <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Test Artist" pStyle = "test style" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
                 <img src = "paintings/romance/Wanderer_above_the_Sea_of_Fog.png">
             </div> -->
         </div>
