--- a/medieval.html
+++ b/medieval.html
@@ -10,43 +10,49 @@
 </head>
 
 <div class="wall medieval">
-    <div id = "nav-bar">
+    <div id="nav-bar">
         <h1 class="period-header">THE MEDIEVAL ERA
-            <a class = "audiobutton" soundfile="sounds/Medieval.mp3">Play Audio</a>
+            <a class="audiobutton" soundfile="sounds/Medieval.mp3">Play Audio</a>
         </h1>
     </div>
-        <div id = "main">
-            <div class="grid">
-            <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Test Artist" pStyle = "test style" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
-                <img src = "paintings/Medieval/Untitled_Artwork 1.png">
+    <div id="main">
+        <div class="grid">
+            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
+                pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
+                <img src="paintings/Medieval/Untitled_Artwork 1.png">
             </div>
-            <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Test Artist" pStyle = "test style" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
-                <img src = "paintings/Medieval/Untitled_Artwork 2.png">
+            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
+                pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
+                <img src="paintings/Medieval/Untitled_Artwork 2.png">
             </div>
-            <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Test Artist" pStyle = "test style" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
-                <img src = "paintings/Medieval/Untitled_Artwork 3.png">
+            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
+                pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
+                <img src="paintings/Medieval/Untitled_Artwork 3.png">
             </div>
-            <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Test Artist" pStyle = "test style" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
-                <img src = "paintings/Medieval/Untitled_Artwork 4.png">
+            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
+                pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
+                <img src="paintings/Medieval/Untitled_Artwork 4.png">
             </div>
-            <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Test Artist" pStyle = "test style" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
-                <img src = "paintings/Medieval/Untitled_Artwork 5.png">
+            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
+                pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
+                <img src="paintings/Medieval/Untitled_Artwork 5.png">
             </div>
-            <div class="painting grid-item" pTitle = "Test Painting Title" pArtist = "Test Artist" pStyle = "test style" pWikiLink ="https://en.wikipedia.org/wiki/Mona_Lisa">
-                <img src = "paintings/Medieval/Untitled_Artwork.png">
+            <div class="painting grid-item" pTitle="Test Painting Title" pArtist="Test Artist" pStyle="test style"
+                pWikiLink="https://en.wikipedia.org/wiki/Mona_Lisa">
+                <img src="paintings/Medieval/Untitled_Artwork.png">
             </div>
-            
+
         </div>
-        
-        <div class = "modal hidden">
-            <div class = "modal-overlay">
-                <div class = "modal-container">
-                    <button class = "modal-close">x</button>
-                    <h1 class = "modal-title"></h1>
-                    <img class = "modal-img">
-                    <div class = "modal-content">
+
+        <div class="modal hidden">
+            <div class="modal-overlay">
+                <div class="modal-container">
+                    <button class="modal-close">x</button>
+                    <h1 class="modal-title"></h1>
+                    <img class="modal-img">
+                    <div class="modal-content">
                     </div>
-                    <a class = "modal-wiki"><button>Read more on Wikipedia</button></a>
+                    <a class="modal-wiki"><button>Read more on Wikipedia</button></a>
                 </div>
             </div>
         </div>
