--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
-    <script src="js/masonry.pkgd.min.js"></script>
+    <!-- <script src="js/masonry.pkgd.min.js"></script> -->
     <script>
         $('.grid').imagesLoaded(function () {
                 $(".grid").masonry({
